2009-02-26 17:33  rsbivand

	* R/spsample.R: spsample and gridded polygons

2009-02-26 12:59  rsbivand

	* DESCRIPTION, R/spsample.R: spsample and gridded polygons

2009-02-20 12:02  edzer

	* R/zerodist.R, tests/zerodist.R, tests/zerodist.Rout.save:
	  zerodist test includes unique.ID argument

2009-02-20 11:08  edzer

	* R/zerodist.R, man/zerodist.Rd: added the unique.ID argument to
	  zerodist

2009-02-19 15:02  edzer

	* R/spplot.R: spplot of logical variables did not work

2009-02-19 14:21  edzer

	* src/zerodist.c: added user interrup checking in outer loop

2009-02-19 14:19  rsbivand

	* DESCRIPTION, R/Class-SpatialPolygons.R,
	  R/SpatialPolygons-methods.R: non finite label points

2009-02-19 09:47  edzer

	* R/spplot.R: allowed for boolean variables

2009-02-16 10:14  rsbivand

	* DESCRIPTION, R/GridTopology-methods.R, R/SpatialGrid-methods.R:
	  dimension dropping in single cell grids

2009-01-22 16:50  edzer

	* inst/doc/sp.Rnw: corrected description of overlay.

2009-01-04 16:01  edzer

	* DESCRIPTION: version update

2009-01-04 16:01  edzer

	* DESCRIPTION: 0.9-29 commit, as accepted

2009-01-04 15:26  edzer

	* man/: 00sp.Rd, Spatial-class.Rd: corrected typos

2009-01-04 15:06  edzer

	* man/: coordinates-methods.Rd, polygons-methods.Rd, spsample.Rd:
	  docs typos

2009-01-04 14:59  edzer

	* man/asciigrid.Rd: {z} replaced with \code{z}

2009-01-04 14:58  edzer

	* man/00sp.Rd: removed reference to spproj

2009-01-03 16:02  edzer

	* DESCRIPTION: version update

2009-01-03 16:01  edzer

	* man/spplot.Rd: examples for factor variables

2009-01-03 15:08  edzer

	* R/spplot.R: further checking on length of col.regions when
	  plotting a factor

2009-01-03 14:48  edzer

	* DESCRIPTION, INDEX, R/spplot.R, R/stack.R, man/spplot.Rd: version
	  update; spplot and stack: better deal with factor dependent
	  variables

2008-12-28 12:12  edzer

	* R/SpatialPoints-methods.R: SpatialPoints() now preserves rownames
	  of coordinates, if they are present
