@@ -1,6 +1,6 @@
 Package: sp
-Version: 0.9-33
-Date: 2009-02-26
+Version: 0.9-34
+Date: 2009-03-31
 Title: classes and methods for spatial data
 Author: Edzer J. Pebesma <edzer.pebesma@uni-muenster.de>, Roger Bivand <Roger.Bivand@nhh.no> and others
 Maintainer: Edzer J. Pebesma <edzer.pebesma@uni-muenster.de>
